[gd_scene load_steps=8 format=2]

[ext_resource path="res://Living/Enemies/PlasmaDrone/PlasmaDrone.gd" type="Script" id=1]
[ext_resource path="res://Placeholder.png" type="Texture" id=2]
[ext_resource path="res://Living/Enemies/PlasmaDrone/Assets/DroneRange.png" type="Texture" id=3]
[ext_resource path="res://Util/FrameCounter.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 700.0

[node name="Plasma_Drone" type="KinematicBody2D"]
collision_layer = 12
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.710849, 0.727078 )
frames = SubResource( 2 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 3 )

[node name="RangeIndicator" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 3.8147e-06, -3.43323e-05 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 3 )

[node name="ChargeUp" type="Node" parent="."]
script = ExtResource( 4 )
activeFrames = 30

[node name="ShootCooldown" type="Node" parent="."]
script = ExtResource( 4 )
activeFrames = 40
[connection signal="body_entered" from="Range" to="." method="_on_range_entered"]
